Fixes header menu paddings and divider horizontal scroll

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -17,7 +17,7 @@
     grid-template-areas: "contacts-title contacts-map"
                           "contacts-address contacts-map"
                           "contacts-action contacts-map";
-    padding: 71px global.$padding-big 105px global.$padding-left-big;
+    padding: 71px 0 105px global.$padding-left-big;
   }
 
   @media (min-width: global.$width-x-big) { /* Не очень изящно вводить переменную ради одного места, но не знаю, как обойти это. */
