--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,6 +1,7 @@
 @use "../utils/global.scss";
 
 .container {
+  position: relative;
   padding-left: global.$padding-small;
   padding-right: global.$padding-small;
 
@@ -10,14 +11,8 @@
   }
 
   @media (min-width: global.$width-big) {
+    position: static;
     padding-left: var(--page-padding-big);
     padding-right: var(--page-padding-big);
-  }
-
-  &--padding-big-only {
-    @media (min-width: global.$width-small) and (max-width: global.$width-big) {
-      padding-left: 0;
-      padding-right: 0;
-    }
   }
 }
