--- a/source/sass/blocks/divider.scss
+++ b/source/sass/blocks/divider.scss
@@ -1,30 +1,26 @@
 @use "../utils/global.scss";
 
 .divider {
-  position: relative;
 
   &::after {
     content: "";
     position: absolute;
+    left: 0;
     right: 0;
     bottom: 0;
     z-index: -1;
-    width: 100vw;
+    width: 100%;
     height: 10%;
 
     @media (min-width: global.$width-small) {
-      left: -#{global.$padding-small};
       background: url("../img/divider-small.png") repeat-x transparent bottom;
     }
 
     @media (min-width: global.$width-medium) {
-      left: -#{global.$padding-medium};
       background: url("../img/divider-medium.png") repeat-x transparent bottom;
     }
 
     @media (min-width: global.$width-big) {
-      left: 0;
-      width: 100%;
       background: url("../img/divider-big.png") repeat-x transparent bottom;
     }
   }
