--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -19,28 +19,3 @@
     padding: 0;
   }
 }
-
-.main-header__navigation--open {
-  @media (min-width: global.$width-small) {
-    position: absolute;
-    left: 0;
-    right: 0;
-    z-index: 2;
-  }
-
-  @media (min-width: global.$width-medium) {
-    position: static;
-  }
-}
-
-.main-header__navigation--close .main-navigation__main-menu { /* А так вообще можно, что у меня в классе блока упоминается чужой элемент? */
-  @media not all and (min-width: global.$width-medium) {
-    display: none;
-  }
-}
-
-.main-header__navigation--close .main-navigation__user-menu {
-  @media not all and (min-width: global.$width-medium) {
-    display: none;
-  }
-}
